[package]
name = "multitag"
version = "0.1.0"
edition = "2021"
description = "A crate for reading and writing music metadata in a variety of formats"
license = "MIT"
repository = "https://github.com/karx1/multitag"
readme = "README.md"

[dependencies]
id3 = "1.14.0"
thiserror = "1"
mp4ameta = "0.11.0"
metaflac = "0.2.7"
opusmeta = "1.0.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
