[package]
name = "multitag"
version = "0.3.1"
edition = "2021"
description = "A crate for reading and writing music metadata in a variety of formats"
license = "MIT"
repository = "https://github.com/karx1/multitag"
homepage = "https://karx.xyz/projects/multitag"
readme = "README.md"

[dependencies]
id3 = "1.14.0"
thiserror = "1"
mp4ameta = "0.11.0"
metaflac = "0.2.7"
opusmeta = "1.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
